main page spacing fixed

--- a/src/assets/css/media_queries.scss
+++ b/src/assets/css/media_queries.scss
@@ -9,16 +9,19 @@
 
 @media only screen and (max-width: 600px) {
   .search-container {
-
     width: 100%;
     padding-top: 30%;
-
     .screen-logo {
       width: 70%;
     }
-
+    .search-query-parent{
+      margin:10% auto 0;
+      .search-box-container{
+        height:40px;
+      }
+    }
     .filtering-type {
-      font-size: 8px;
+      font-size: 13px;
     }
   }
   .search-container-loaded {
@@ -52,7 +55,7 @@
       }
     }
     .list-videos-container{
-      padding: 0px;
+      padding: 0;
     }
   }
 }
